[tool.poetry]
name = "network-analysis-assignment3"
version = "0.1.0"
description = ""
authors = ["siponek <szinkowicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.2"
networkx = "^3.3"
matplotlib = "^3.8.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
